[package]
name = "satchel-controller"
version = "0.1.0"
authors = ["William Stevens <contact@wastevensv.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
diesel = { version = "1.0", features = ["mysql"] }
dotenv = "0.9.0"
