[package]
name = "satchel_controller"
version = "0.1.0"
authors = ["William Stevens <contact@wastevensv.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "satchel"
path = "src/lib.rs"

[features]
default = ["sqlite"]
sqlite = ["diesel_migrations/sqlite", "diesel/sqlite", "rocket_contrib/diesel_sqlite_pool"]
mysql = ["diesel_migrations/mysql", "diesel/mysql", "rocket_contrib/diesel_mysql_pool"]

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
diesel = { version = "1.4", features = ["r2d2"] }
r2d2 = "0.8"
diesel_migrations = "1.4"
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
